fixed spacing issue of buttons on homepage and added hover effects to the logo (home button) and the navbar buttons

--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -2,7 +2,23 @@
     box-shadow: 0px 5px 5px #777;
 };
 
-.brand {
-    align-items: left;
+.button-container {
+    display: flex;
+    justify-content: flex-end;
 }
 
+.button-container .btn {
+    box-shadow: 0px 2px 2px white;
+    margin-right: 10px;
+    font-style: italic;
+}
+
+.button-container .btn:hover {
+    transform: scale(1.1);
+    opacity: .7;
+}
+
+.navbar-logo:hover {
+    transform: scale(1.1);
+    opacity: .7;
+}
